# puppetcpp

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  codecov.yml  main.cc
exe/: CMakeLists.txt  main.cc
lib/: CMakeLists.txt
lib/include/puppet/: api.h  cast.hpp
lib/include/puppet/ast/: access_expression.hpp  array.hpp  bare_word.hpp  boolean.hpp  case_expression.hpp  class_definition_expression.hpp  collection_expression.hpp  defaulted.hpp  defined_type_expression.hpp  expression.hpp  expression_def.hpp  function_call_expression.hpp  hash.hpp  if_expression.hpp  lambda.hpp  manifest.hpp  method_call_expression.hpp  name.hpp  node_definition_expression.hpp  number.hpp  parameter.hpp  postfix_expression.hpp  regex.hpp  resource_defaults_expression.hpp  resource_expression.hpp  resource_override_expression.hpp  selector_expression.hpp  string.hpp  syntax_tree.hpp  type.hpp  undef.hpp  unless_expression.hpp  utility.hpp  variable.hpp
lib/include/puppet/compiler/: attribute.hpp  catalog.hpp  context.hpp  environment.hpp  exceptions.hpp  finder.hpp  grammar.hpp  module.hpp  node.hpp  parser.hpp  registry.hpp  resource.hpp  scanner.hpp  settings.hpp  token_pos.hpp
lib/include/puppet/compiler/ast/: adapted.hpp  ast.hpp
lib/include/puppet/compiler/evaluation/: access_evaluator.hpp  call_evaluator.hpp  context.hpp  evaluator.hpp  (+6 more)
lib/include/puppet/experimental/: api.h
lib/include/puppet/facts/: facter.hpp  provider.hpp  yaml.hpp
lib/include/puppet/lexer/: lexer.hpp  number_token.hpp  position.hpp  string_token.hpp  token_id.hpp
lib/include/puppet/logging/: logger.hpp
lib/include/puppet/options/: command.hpp  defaults.hpp  executor.hpp  parser.hpp
lib/include/puppet/parser/: grammar.hpp  parser.hpp
lib/include/puppet/runtime/: call_context.hpp  catalog.hpp  context.hpp  definition_scanner.hpp  dispatcher.hpp  evaluator.hpp  executor.hpp  expression_evaluator.hpp  operators.hpp  scope.hpp  string_interpolator.hpp  value.hpp  yielder.hpp
lib/include/puppet/unicode/: string.hpp
lib/include/puppet/utility/: error_reporter.hpp  indirect_collection.hpp  regex.hpp
lib/src/: api.cc
lib/src/ast/: access_expression.cc  array.cc  bare_word.cc  boolean.cc  case_expression.cc  class_definition_expression.cc  collection_expression.cc  defaulted.cc  defined_type_expression.cc  expression.cc  function_call_expression.cc  hash.cc  if_expression.cc  lambda.cc  manifest.cc  method_call_expression.cc  name.cc  node_definition_expression.cc  number.cc  parameter.cc  postfix_expression.cc  regex.cc  resource_defaults_expression.cc  resource_expression.cc  resource_override_expression.cc  selector_expression.cc  string.cc  syntax_tree.cc  type.cc  undef.cc  unless_expression.cc  variable.cc  visitors.cc
lib/src/compiler/: attribute.cc  catalog.cc  context.cc  environment.cc  exceptions.cc  finder.cc  module.cc  node.cc  parser.cc  registry.cc  resource.cc  scanner.cc  settings.cc
lib/src/compiler/ast/: ast.cc
lib/src/compiler/evaluation/: access_evaluator.cc  call_evaluator.cc  context.cc  dispatcher.cc  evaluator.cc  interpolator.cc  postfix_evaluator.cc  repl.cc  scope.cc  stack_frame.cc
lib/src/compiler/lexer/: generate_static_lexer.cc  lexer.cc  number_token.cc  position.cc  token_id.cc  tokens.cc
lib/src/compiler/parser/: parser.cc
lib/src/compiler/posix/: settings.cc
lib/src/compiler/validation/: type_validator.cc
lib/src/experimental/: api.cc
lib/src/facts/: facter.cc  yaml.cc
lib/src/lexer/: generate_static_lexer.cc  lexer.cc  number_token.cc  position.cc  string_token.cc  token_id.cc
lib/src/logging/: logger.cc
lib/src/options/: command.cc  executor.cc  parser.cc
lib/src/options/commands/: compile.cc  help.cc  parse.cc  repl.cc  version.cc
lib/src/options/posix/: defaults.cc
lib/src/parser/: parser.cc
lib/src/runtime/: catalog.cc  context.cc  definition_scanner.cc  dispatcher.cc  executor.cc  expression_evaluator.cc  operators.cc  scope.cc  string_interpolator.cc  value.cc  yielder.cc
lib/src/runtime/collectors/: collector.cc  list_collector.cc  query_collector.cc  query_evaluator.cc
lib/src/runtime/evaluators/: access.cc  basic.cc  catalog.cc  control_flow.cc  postfix.cc  primary.cc
lib/src/runtime/functions/: assert_type.cc  contain.cc  declare.cc  defined.cc  each.cc  fail.cc  filter.cc  include.cc  logging.cc  map.cc  realize.cc  reduce.cc  require.cc  shellquote.cc  split.cc  versioncmp.cc  with.cc
lib/src/runtime/operators/: assignment.cc  binary_context.cc  divide.cc  equals.cc  greater.cc  greater_equal.cc  in.cc  left_shift.cc  less.cc  less_equal.cc  logical_and.cc  logical_not.cc  logical_or.cc  match.cc  minus.cc  modulo.cc  multiply.cc  negate.cc  not_equals.cc  not_match.cc  plus.cc  relationship.cc  right_shift.cc  splat.cc  unary_context.cc
lib/src/runtime/types/: alias.cc  any.cc  array.cc  boolean.cc  callable.cc  catalog_entry.cc  class.cc  collection.cc  data.cc  defaulted.cc  enumeration.cc  floating.cc  hash.cc  integer.cc  iterable.cc  iterator.cc  klass.cc  not_undef.cc  numeric.cc  optional.cc  pattern.cc  regexp.cc  resource.cc  runtime.cc  scalar.cc  string.cc  struct.cc  tuple.cc  type.cc  undef.cc  variant.cc
lib/src/runtime/values/: array.cc  break_iteration.cc  defaulted.cc  hash.cc  iterator.cc  regex.cc  return_value.cc  type.cc  undef.cc  value.cc  variable.cc  wrapper.cc  yield_return.cc
lib/src/unicode/: string.cc
lib/src/utility/: error_reporter.cc  regex.cc
lib/src/utility/filesystem/: helpers.cc
lib/tests/: CMakeLists.txt
lib/tests/compiler/: environment.cc
lib/tests/compiler/ast/: ast.cc
lib/tests/compiler/evaluation/: evaluation.cc  repl.cc
lib/tests/compiler/lexer/: lexer.cc
lib/tests/compiler/parser/: parser.cc
lib/tests/fixtures/lexer/: double_quoted_strings.pp  missing_heredoc_tag.pp  single_quoted_strings.pp  statement_calls.pp  symbolic_tokens.pp
lib/tests/lexer/: lexer.cc
lib/tests/options/: parser.cc
lib/tests/options/commands/: compile.cc  help.cc  parse.cc  repl.cc  version.cc
lib/tests/unicode/: string.cc
tests/: CMakeLists.txt  main.cc
(+947 files in other folders)
